# celery_task

./: .gitignore  README.md  pyproject.toml
api/v1/: permissions.py  urls.py
api/v1/common/: views.py
api/v1/task/: serializers.py  urls.py  utils.py  views.py
api/v1/user/: serializers.py  urls.py  views.py
common/: models.py
conf/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
deploy/: Dockerfile  docker-compose.yml  entrypoint.sh  env.md  requirements.txt
deploy/nginx/: celery_task  post
deploy/supervisor/: post.conf
task/: admin.py  models.py  tasks.py
task/migrations/: 0001_initial.py  0002_initial.py  0003_alter_message_options_message_shipping_time.py  0004_alter_message_receiver.py  0005_message_is_send.py  0006_alter_message_content.py
templates/task/: send_message_template.html  single-news.html
user/: admin.py  managers.py  models.py
user/migrations/: 0001_initial.py
